fixed platform icons width to 1 px also added transition to vacancy titles and fixed letter-spacing & line-height

--- a/src/components/Vacancy/VacancyMobile/style.scss
+++ b/src/components/Vacancy/VacancyMobile/style.scss
@@ -21,7 +21,8 @@
 						font-family: $SFUIDsemibold;
 						font-size: 28px;
 						font-weight: 600;
-						letter-spacing: 0.1px;
+						letter-spacing: 0px;
+						line-height: 1.5;
 						text-align: left;
 						color: #ffffff;
 						&:after {
@@ -56,8 +57,9 @@
 							font-family: $SFUIDsemibold;
 							font-size: 28px;
 							font-weight: 600;
-							letter-spacing: 0.1px;
+							letter-spacing: 0px;
 							text-align: left;
+							line-height: 1.5;
 							color: #ffffff;
 							&:after {
 								background-image: url("../../../img/path-2-copy-5.png");
@@ -80,8 +82,8 @@
 					font-family: $SFUIDsemibold;
 					font-size: 1em;
 					font-weight: 500;
-					line-height: 1;
-					letter-spacing: -0.1px;
+					line-height: 1.5;
+					letter-spacing: 0px;
 					color: #ffffff;
 					padding-bottom: 3px;
 					border-bottom: 1px solid #fff;
