--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -665,6 +665,7 @@ html, body
 					padding-bottom: 70px
 
 					>.profession
+						transition: all 0.5s
 
 						>h2
 							display: inline-block
@@ -672,7 +673,7 @@ html, body
 							font-size: 1em
 							font-weight: 600
 							line-height: 1
-							letter-spacing: 1px
+							letter-spacing: 0px
 							color: #ffffff
 							padding-bottom: 10px
 							border-bottom: 1px solid #fff
@@ -692,7 +693,7 @@ html, body
 								font-size: 2.3em
 								font-weight: 600
 								line-height: 1.14
-								letter-spacing: 1px
+								letter-spacing: 0px
 								color: #ffffff
 								border-bottom: none
 								cursor: default
@@ -779,12 +780,14 @@ html, body
 						display: none
 
 					>.skills
+						transition: all 0.5s
 
 						&.active
 							display: block
 							margin-bottom: 70px
 
 					>.offer
+						transition: all 0.5s
 
 						&.active
 							display: block
